[mz]-init-#2-add table and basic style

--- a/public/index.html
+++ b/public/index.html
@@ -47,110 +47,35 @@
     <tr>
       <td>Dummy Project</td>
       <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
+        <p>
+          DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
+        </p>
       </td>
       <td>2020-01-01</td>
-      <td>PENDING</td>
+      <td class="status-active">ACTIVE</td>
       <td>delete</td>
     </tr>
     <tr>
       <td>Dummy Project</td>
       <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
+        <p>
+          DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
+        </p>
       </td>
       <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
+      <td class="status-closed">CLOSED</td>
+      <td><button class="del-btn">删除</button></td>
     </tr>
     <tr>
       <td>Dummy Project</td>
       <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
+        <p>
+          DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
+        </p>
       </td>
       <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
-    </tr>
-    <tr>
-      <td>Dummy Project</td>
-      <td>
-        DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-      </td>
-      <td>2020-01-01</td>
-      <td>PENDING</td>
-      <td>delete</td>
+      <td class="status-pending">PENDING</td>
+      <td><button class="del-btn">删除</button></td>
     </tr>
     </tbody>
   </table>
