[mz]-feat-#2-AC4 server and ajax completed

--- a/public/index.html
+++ b/public/index.html
@@ -45,46 +45,12 @@
       </tr>
       </thead>
       <tbody id="projects-list">
-      <tr>
-        <td>Dummy Project</td>
-        <td>
-          <p>
-            DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-          </p>
-        </td>
-        <td>2020-01-01</td>
-        <td class="status-active">ACTIVE</td>
-        <td>delete</td>
-      </tr>
-      <tr>
-        <td>Dummy Project</td>
-        <td>
-          <p>
-            DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-          </p>
-        </td>
-        <td>2020-01-01</td>
-        <td class="status-closed">CLOSED</td>
-        <td>
-          <button class="del-btn">删除</button>
-        </td>
-      </tr>
-      <tr>
-        <td>Dummy Project</td>
-        <td>
-          <p title="We’re well aware that there are other awesome Web frameworks out there, and we’re not averse to borrowing ideas where appropriate. However, Django was developed precisely because we were unhappy with the status quo, so please be aware that “because <Framework X> does it” is not going to be sufficient reason to add a given feature to Django.">
-            DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription
-          </p>
-        </td>
-        <td>2020-01-01</td>
-        <td class="status-pending">PENDING</td>
-        <td>
-          <button class="del-btn">删除</button>
-        </td>
-      </tr>
+      <!-- initProjects() -->
       </tbody>
     </table>
   </div>
 </div>
+<script type="module" src="./index.js"></script>
+<script type="module" src="../src/ajax.js"></script>
 </body>
 </html>
