[mz]-feat-#1-AC2 overview rendering completed

--- a/public/index.html
+++ b/public/index.html
@@ -11,23 +11,23 @@
   <div id="projects-overview">
     <div class="overview-card" id="overview-all">
       <p><span class="projects-type">所有任务</span><span class="card-tag">实时</span></p>
-      <p><span class="projects-count">3,841</span><span class="projects-percentage"></span></p>
+      <p><span class="projects-count"></span></p>
       <span class="icon iconfont icon-xiangmu"></span>
     </div>
     <div class="overview-card" id="overview-pending">
       <p><span class="projects-type">未解决</span><span class="card-tag">实时</span></p>
-      <p><span class="projects-count">2,305</span><span class="projects-percentage">60%</span></p>
+      <p><span class="projects-count"></span><span class="projects-percentage">60%</span></p>
       <span class="icon iconfont icon-weijiejue"></span>
 
     </div>
     <div class="overview-card" id="overview-active">
       <p><span class="projects-type">处理中</span><span class="card-tag">实时</span></p>
-      <p><span class="projects-count">384</span><span class="projects-percentage">10%</span></p>
+      <p><span class="projects-count"></span><span class="projects-percentage">10%</span></p>
       <span class="icon iconfont icon-loudou"></span>
     </div>
     <div class="overview-card" id="overview-closed">
       <p><span class="projects-type">已解决</span><span class="card-tag">实时</span></p>
-      <p><span class="projects-count">1,152</span><span class="projects-percentage">30%</span></p>
+      <p><span class="projects-count"></span><span class="projects-percentage">30%</span></p>
       <span class="icon iconfont icon-yijiejue2"></span>
 
     </div>
