[mz]-init-#3-add popup and basic styles

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,18 @@
       </tbody>
     </table>
   </div>
+
+</div>
+<div id="mask">
+  <div class="confirm-box">
+    <p><span class="iconfont icon-guanbi"></span></p>
+    <p><span class="iconfont icon-wenhao"></span><span>提示</span></p>
+    <p><span>确认删除该项目吗?</span></p>
+    <div id="buttons">
+      <button class="confirm-button">确认</button>
+      <button class="cancel-button">取消</button>
+    </div>
+  </div>
 </div>
 <script type="module" src="./index.js"></script>
 <script type="module" src="../src/ajax.js"></script>
