[mz]-feat-#3-AC1 refine styles

--- a/public/index.html
+++ b/public/index.html
@@ -53,9 +53,14 @@
 </div>
 <div id="mask">
   <div class="confirm-box">
-    <p><span class="iconfont icon-guanbi"></span></p>
-    <p><span class="iconfont icon-wenhao"></span><span>提示</span></p>
-    <p><span>确认删除该项目吗?</span></p>
+    <span class="iconfont icon-guanbi close-button"></span>
+    <div class="hint-box">
+      <p class="iconfont icon-wenhao hint-icon"></p>
+      <div class="hint-body">
+        <p class="hint-title">提示</p>
+        <p class="hint-text">确认删除该项目吗?</p>
+      </div>
+    </div>
     <div id="buttons">
       <button class="confirm-button">确认</button>
       <button class="cancel-button">取消</button>
