--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,23 @@
 <body>
 <div id="main">
   <div id="projects-overview">
-    <div class="overview-card" id="overview-all">
+    <div class="overview-card" id="overview-ALL">
       <p><span class="projects-type">所有任务</span><span class="card-tag">实时</span></p>
       <p><span class="projects-count"></span></p>
       <span class="icon iconfont icon-xiangmu"></span>
     </div>
-    <div class="overview-card" id="overview-pending">
+    <div class="overview-card" id="overview-PENDING">
       <p><span class="projects-type">未解决</span><span class="card-tag">实时</span></p>
       <p><span class="projects-count"></span><span class="projects-percentage">60%</span></p>
       <span class="icon iconfont icon-weijiejue"></span>
 
     </div>
-    <div class="overview-card" id="overview-active">
+    <div class="overview-card" id="overview-ACTIVE">
       <p><span class="projects-type">处理中</span><span class="card-tag">实时</span></p>
       <p><span class="projects-count"></span><span class="projects-percentage">10%</span></p>
       <span class="icon iconfont icon-loudou"></span>
     </div>
-    <div class="overview-card" id="overview-closed">
+    <div class="overview-card" id="overview-CLOSED">
       <p><span class="projects-type">已解决</span><span class="card-tag">实时</span></p>
       <p><span class="projects-count"></span><span class="projects-percentage">30%</span></p>
       <span class="icon iconfont icon-yijiejue2"></span>
