[mz]-fix-#0-fix path for deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>项目管理</title>
-  <link href="../resource/iconfont/iconfont.css" rel="stylesheet"/>
+  <link href="./resource/iconfont/iconfont.css" rel="stylesheet"/>
   <link href="./index.css" rel="stylesheet"/>
 </head>
 <body>
@@ -50,6 +50,6 @@
 </div>
 <!-- renderConfirmBox() -->
 <script type="module" src="./index.js"></script>
-<script type="module" src="../src/ajax.js"></script>
+<script type="module" src="./src/ajax.js"></script>
 </body>
 </html>
