[mz]-fix-#0-fix path

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 </div>
 <!-- renderConfirmBox() -->
 <script type="module" src="./index.js"></script>
-<script type="module" src="./src/ajax.js"></script>
+<script type="module" src="./ajax.js"></script>
 </body>
 </html>
