[mz]-refactor-#0-rearrange html tags

--- a/index.html
+++ b/index.html
@@ -10,23 +10,46 @@
 <div id="main">
   <section id="overview-cards">
     <article id="card-all">
-      <p><span class="card-type">所有任务</span><span class="card-tag">实时</span></p>
-      <p><span class="card-count"></span></p>
+      <p>
+        <span class="card-type">所有任务</span>
+        <span class="card-tag">实时</span>
+      </p>
+      <p>
+        <span class="card-count"></span>
+      </p>
       <span class="card-icon iconfont icon-xiangmu"></span>
     </article>
     <article id="card-pending">
-      <p><span class="card-type">未解决</span><span class="card-tag">实时</span></p>
-      <p><span class="card-count"></span><span class="card-percent"></span></p>
+      <p>
+        <span class="card-type">未解决</span>
+        <span class="card-tag">实时</span>
+      </p>
+      <p>
+        <span class="card-count"></span>
+        <span class="card-percent"></span>
+      </p>
       <span class="card-icon iconfont icon-weijiejue"></span>
     </article>
     <article id="card-active">
-      <p><span class="card-type">处理中</span><span class="card-tag">实时</span></p>
-      <p><span class="card-count"></span><span class="card-percent"></span></p>
+      <p>
+        <span class="card-type">处理中</span>
+        <span class="card-tag">实时</span>
+      </p>
+      <p>
+        <span class="card-count"></span>
+        <span class="card-percent"></span>
+      </p>
       <span class="card-icon iconfont icon-loudou"></span>
     </article>
     <article id="card-closed">
-      <p><span class="card-type">已解决</span><span class="card-tag">实时</span></p>
-      <p><span class="card-count"></span><span class="card-percent"></span></p>
+      <p>
+        <span class="card-type">已解决</span>
+        <span class="card-tag">实时</span>
+      </p>
+      <p>
+        <span class="card-count"></span>
+        <span class="card-percent"></span>
+      </p>
       <span class="card-icon iconfont icon-yijiejue2"></span>
     </article>
   </section>
