[mz]-refactor-#0-integrate iconfont

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>项目管理</title>
-  <link href="./resource/iconfont/iconfont.css" rel="stylesheet"/>
   <link href="./index.css" rel="stylesheet"/>
 </head>
 <body>
@@ -17,7 +16,7 @@
       <p>
         <span class="card-count"></span>
       </p>
-      <span class="card-icon iconfont icon-xiangmu"></span>
+      <span class="card-icon iconfont icon-all"></span>
     </article>
     <article id="card-pending">
       <p>
@@ -28,7 +27,7 @@
         <span class="card-count"></span>
         <span class="card-percent"></span>
       </p>
-      <span class="card-icon iconfont icon-weijiejue"></span>
+      <span class="card-icon iconfont icon-pending"></span>
     </article>
     <article id="card-active">
       <p>
@@ -39,7 +38,7 @@
         <span class="card-count"></span>
         <span class="card-percent"></span>
       </p>
-      <span class="card-icon iconfont icon-loudou"></span>
+      <span class="card-icon iconfont icon-active"></span>
     </article>
     <article id="card-closed">
       <p>
@@ -50,7 +49,7 @@
         <span class="card-count"></span>
         <span class="card-percent"></span>
       </p>
-      <span class="card-icon iconfont icon-yijiejue2"></span>
+      <span class="card-icon iconfont icon-closed"></span>
     </article>
   </section>
   <section id="projects-details">
